# patent-image-retrieval

./: Makefile.txt  README.md  gitignore.txt  pyproject.toml  requirements.txt  split_query.ipynb
notebooks/: graph generation (1).ipynb  image_index_2018.pkl  image_index_2019.pkl  plot.ipynb  retrieval.ipynb
src/: auxiliary.py  compute_graph_embeddings.py  models.py  plot.py  process_graph.py  train.py
