[tool.poetry]
name = "Alvaro-Thesis"
version = "0.1.0"
description = ""
authors = ["Alvaro de la Maza <a.delamaza@tkh.ai>"]
homepage = "https://github.com/Alvarodelamaza/patent-graph"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
numpy = "^1.24.0"  # Compatible with Python 3.10
scipy = "^1.10.0"   # Compatible with Python 3.10
scikit-learn = "^1.3.0"  # Compatible with Python 3.10
torch = "^2.0.0"    # Compatible with Python 3.10
torch_geometric = "^2.2.0"  # Check for compatibility with your PyTorch version
matplotlib = "^3.7.0"  # Compatible with Python 3.10
pandas = "^2.1.0"
ipykernel = "^6.29.5"
jupyter = "^1.1.1"
torchvision = "^0.21.0"
timm = "^1.0.14"
transformers = "^4.49.0"
wandb = "^0.19.7"
seaborn = "^0.13.2"



[tool.poetry.group.dev.dependencies]
pre-commit = "*"
black = "*"
black_nbconvert = "*"
flake8 = "*"
isort = "*"
bandit = "*"
pydocstyle = "*"
pyupgrade = "*"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | \data
)/
'''

[tool.isort]
profile = 'black'

[tool.pydocstyle]
convention = "google"
add-ignore = "D100,D101,D102,D103,D104,D105,D106,D107"
